Fixed committee logos being blurred on Chrome.

--- a/src/styles.less
+++ b/src/styles.less
@@ -257,9 +257,10 @@ body {
             }
 
             >img {
+                image-rendering: pixelated;
                 margin: auto;
                 height: 34px;
-                image-rendering: crisp-edges;
+                //image-rendering: crisp-edges;
                 margin-top: 24px;
                 margin-bottom: 24px;
             }
@@ -275,7 +276,7 @@ body {
             >img {
                 //height: 256px;
                 width: 256px;
-                image-rendering: crisp-edges;
+                image-rendering: pixelated;
             }
         }
     }
